# packages/bot/src/routes/dayoff/index.ts
@@ -1,0 +1,9 @@
+import express, { Router } from 'express'
+import dayOffController from '../../controllers/dayoff'
+
+const router: Router = express.Router()
+
+// READ
+router.post( '/check', dayOffController.checkDayOff )
+
+export default router
